--- a/PonyRides/PonyRidesWebSite/Views/Home/Index.cshtml
+++ b/PonyRides/PonyRidesWebSite/Views/Home/Index.cshtml
@@ -20,19 +20,13 @@
         <p>
             Browse our selection of Ponies and select your favorite one.
         </p>
-        @if (Request.IsAuthenticated)
-        {
-            <button class="btn btn-lg" onclick="location.href = '/Ponies';">Browse Ponies</button>
-        }
-        else
-        {
-            <button class="btn btn-lg" onclick="location.href = '/Account/Register';">Register</button>
-        }
+        <button class="btn btn-lg" onclick="location.href = '/BrowsePonies';">Browse Ponies</button>
 
     </div>
     <div class="col-md-6">
         <h2>View your booking(s)</h2>
         <p>Login and view your bookings.</p>
+
         @if (Request.IsAuthenticated)
         {
             <button class="btn btn-lg" onclick="location.href = '/Booking';">View Bookings</button>
