--- a/PonyRides/PonyRidesWebSite/Views/Home/Index.cshtml
+++ b/PonyRides/PonyRidesWebSite/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
             <p class="lead"><img src="~/media/pony.png" />
             </div>
         <div class="col-md-8">
-            <p class="lead">Kids bored? What child doesnt love pony rides? Bring them to our fun filled farm close to the city and let them enjoy our ponies while you rest and relax with a coffee and cake.</p>
+            <p class="lead">Kids bored? What child doesn't love pony rides? Bring them to our fun filled farm close to the city and let them enjoy our ponies while you rest and relax with a coffee and cake.</p>
         </div>
     </div>
 </div>
@@ -29,7 +29,7 @@
 
         @if (Request.IsAuthenticated)
         {
-            <button class="btn btn-lg" onclick="location.href = '/Booking';">View Bookings</button>
+            <button class="btn btn-lg" onclick="location.href = '/MyBookings';">View Bookings</button>
         }
         else
         {
