--- a/PonyRides/PonyRidesWebSite/Views/MyBookings/Index.cshtml
+++ b/PonyRides/PonyRidesWebSite/Views/MyBookings/Index.cshtml
@@ -39,8 +39,13 @@
             @Html.DisplayFor(modelItem => item.Session)
         </td>
         <td>
-             @Html.ActionLink("Delete", "Delete", new { id=item.SessionID })
+            @Html.ActionLink(   "Delete",
+                                "Delete",
+                                new { id = item.SessionID },
+                                new { onclick = "return confirm('Are you sure you wish to delete this booking?'); " })
         </td>
+
+
     </tr>
 }
 
